# strands-agent-template

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  README.md
.github/workflows/: agent-ci.yml  cdk-ci.yml
.kiro/hooks/: code-review-button.kiro.hook
.kiro/steering/: product.md  python-agent.md  structure.md  tech.md  typescript-cdk.md
agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  quality-check.sh
agent/src/: __init__.py  agent.py  agentcore_app.py
agent/src/tools/: __init__.py  custom_tools.py
agent/tests/: test_agent.py
agent/tests/test_tools/: test_custom_tools.py
cdk/: .env.example  .prettierignore  README.md  cdk.json  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  tsconfig.json
cdk/lib/: strands-agent-stack.ts
cdk/test/: cdk.test.ts
cdk/test/__snapshots__/: cdk.test.ts.snap
